# Linux1c

./: .anjuta_sym_db.db  Makefile.in  README.md  configure  file.c  file.h  iNode.c  iNode.h  main.c  main.h  save_file.txt
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: config.h  config.status  libtool
Debug/po/: Makefile.in  POTFILES
Debug/src/: fs
autom4te.cache/: requests  traces.1
fs/: .anjuta_sym_db.db  configure.ac  save_file.txt
fs/.anjuta/session/: anjuta.session  dock-layout.xml
fs/Debug/: Makefile
fs/Debug/po/: Makefile
fs/Debug/src/: Makefile  fs
fs/Debug/src/.deps/: main.Po
fs/autom4te.cache/: output.0  output.1  traces.0
fs/src/: Makefile.am  main.c  main.c~
server+client/client/: .anjuta_sym_db.db  Makefile.am  Makefile.in  configure  configure.ac  main.c  main.c~
server+client/client/.anjuta/session/: anjuta.session  dock-layout.xml
server+client/client/Debug/: Makefile  client  config.h  config.status
server+client/client/Debug/.deps/: main.Po
server+client/client/autom4te.cache/: output.1  requests  traces.1
server+client/server/: .anjuta_sym_db.db  Makefile.am  Makefile.in  configure  configure.ac  main.c  main.c~
server+client/server/.anjuta/session/: anjuta.session  dock-layout.xml
server+client/server/Debug/: Makefile  config.h  config.status  server
server+client/server/Debug/.deps/: main.Po
server+client/server/autom4te.cache/: output.0  requests  traces.1
src/: Makefile.in  main.c~
